# virtio-drivers-and-devices

./: CLAUDE_ULTRAREVIEW.md  CODEX_REVIEW.md  Cargo.toml
examples/aarch64/: Cargo.toml
examples/aarch64/src/: hal.rs  main.rs
examples/riscv/src/: virtio_impl.rs
examples/x86_64/src/: hal.rs  main.rs
src/: config.rs  hal.rs  lib.rs  queue.rs
src/device/: blk.rs  console.rs  gpu.rs  input.rs  rng.rs  sound.rs
src/device/net/: dev_raw.rs  mod.rs  net_buf.rs
src/device/socket/: connectionmanager.rs  mod.rs  protocol.rs  splitmanager.rs  spsc.rs  vsock.rs
src/queue/: owning.rs
src/transport/: fake.rs  mmio.rs  mod.rs  pci.rs  some.rs  x86_64.rs
src/transport/pci/: bus.rs
src/transport/x86_64/: hypercalls.rs
